--- a/teste/style.css
+++ b/teste/style.css
@@ -15,11 +15,12 @@ html {
     background-color: black;
     color: rgb(0, 0, 0);
     font-size: 16px;
-    overflow: hidden;
+    
     
     
 
-    background-image: radial-gradient(rgb(255, 230, 191), #FF6A00);
+    /* background-image: radial-gradient(rgb(255, 230, 191), #FF6A00); */
+    background-color: #000;
 }
 
 
@@ -65,11 +66,381 @@ header {
 
 
 
+.hero {
+    
+    width: 100%;
+    min-height: 100vh;
+    
+    & .bg {
+        width: 100%;
+        height: 100vh;
+        
+        position: absolute;
+        z-index: -1;
 
+        & img {
+            width: 100%;
+            height: 100vh;
+            object-fit: cover;
+            background-size: cover;
+            
+            
+            opacity: .5;
+
+            &:hover {
+            width: 100%;
+            height: 100vh;
+            object-fit: cover;
+            background-size: cover;
+            filter: blur(0);
+            opacity: .1;
+            }
+        }
+    }
+}
+
+
+
+.logo-bg {
+    width: 50%;
+    height: 100vh;
+    position: absolute;
+
+    top: 25%;
+    left: 25%;
+    
+    
+
+    & img {
+        opacity: .8;
+        transition: 1s;
+        width: 500px;
+        
+
+        &:hover {
+            transition: 1s;
+           transform: scale(1.1);
+        }
+    }
+}
+
+.bg-content {
+    width: 45%;
+    height: 100vh;
+
+    position: absolute;
+
+    top: 42%;
+    left: 55%;
+
+
+    & h1 {
+        width: 100%;
+        height: 100vh;
+        background: linear-gradient(270deg, #ffffff, rgb(223, 223, 223), #c5c5c5, transparent); /* degrade cíclico */
+        background-size: 1000% 800%; 
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: moveGradient 15s ease infinite;
+
+        pointer-events: none;
+        font-family: Inter;
+        font-size: 5rem;
+        line-height: 4rem;
+        color: rgb(0, 0, 0);
+        
+        
+    }
+}
+
+.buttons {
+    position: absolute;
+    text-decoration: none;
+
+
+    display: flex;
+    gap: 1rem;
+    top: 65%;
+    left: 55%;
+
+
+
+    & .btn {
+        border-radius: 30px;
+        height: 35px;
+        width: 80px;
+        cursor: pointer;
+        background-color: #ff5e00;
+        transition: .3s;
+        font-family: inter;
+        font-weight: bold;
+        font-size: .8rem;
+
+        &:hover {
+            background-color: #ff5e00;
+                        transition: .3s;
+                        transform: translatey(-5px);
+        }
+            & a {
+                height: 35px;
+                width: 80px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                
+
+                text-decoration: none;
+                color: rgb(255, 255, 255);
+                text-shadow: 1px 1px 5px rgba(0,0,0,.5);
+            }
+    }
+}
+
+.background {
+    background-image: radial-gradient(rgb(255, 230, 191), #FF6A00);
+}
+
+
+.about {
+    
+    width: 100%;
+    height: 100vh;
+
+    & .title {
+        
+        background: linear-gradient(270deg, #ffffff, rgb(223, 223, 223), #c5c5c5, transparent); /* degrade cíclico */
+        background-size: 1000% 800%; 
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: moveGradient 15s ease infinite;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        padding: 2rem;
+        padding-top: 5rem;
+        font-size: 5rem;
+        font-weight: 100;
+
+        & strong {
+            font-style: italic;
+            font-weight: 900;
+        }
+    }
+    
+}
+
+.pelotas {
+    width: 50%;
+    padding: 5rem;
+    height: 500px;
+
+    
+
+    
+
+    & img {
+        width: 500px;
+    }
+
+    & .about-pelotas {
+        color: black;
+        width: 500px;        
+    }
+
+    & .info-pelotas {
+        font-size: .8rem;
+
+        position: absolute;
+        z-index: 99999;
+
+        & h1 {
+            padding-top: 1rem;
+            
+        }
+
+        & i {
+            padding-top: 2rem;
+            
+
+            & p {
+                
+                padding-left: 1.4rem;
+                font-weight: 500; 
+                          
+
+                & strong {
+                    font-style: italic;
+                    font-weight: 900;
+                }
+            }
+        }
+
+
+        & .btn {
+            padding-top: 1rem;
+           
+            & button {
+                
+                
+
+                border-radius: 30px;
+                height: 35px;
+                width: 120px;
+                
+                
+                font-size: 1rem;
+
+                font-weight: bold;
+                border: none;
+
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                transition: .3s;
+                color: #ffffff;
+                cursor: pointer;
+                background-color: #ff5e00;
+
+                
+                    &:hover {
+                        
+                        background-color: #ff5e00;
+                        transition: .3s;
+                        transform: translatey(-5px);
+                                 
+                    }
+
+                & a {
+                    color: rgb(255, 255, 255);
+
+                    font-weight: 500;
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: .8rem;
+                    
+                    width: 120px;
+
+                    text-shadow: 1px 1px 5px rgba(0,0,0,.5);
+
+                    & strong {
+                        font-style: italic;
+                    }                    
+                }
+            }
+        }
+    }    
+}
+
+
+.camaqua {
+    width: 50%;
+
+    padding: 5rem;
+    height: 500px;
+
+
+    & img {
+        width: 500px;
+    }
+
+    & .about-pelotas {
+        color: black;
+        width: 500px;        
+    }
+
+    & .info-pelotas {
+        font-size: .8rem;
+
+        position: absolute;
+        z-index: 99999;
+
+        & h1 {
+            padding-top: 1rem;
+            
+        }
+
+        & i {
+            padding-top: 2rem;
+            
+
+            & p {
+                
+                padding-left: 1.4rem;
+                font-weight: 500; 
+                          
+
+                & strong {
+                    font-style: italic;
+                    font-weight: 900;
+                }
+            }
+        }
+
+
+        & .btn {
+            padding-top: 1rem;
+           
+            & button {
+                
+                
+
+                border-radius: 30px;
+                height: 35px;
+                width: 120px;
+                
+                
+                font-size: 1rem;
+
+                font-weight: bold;
+                border: none;
+
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                transition: .3s;
+                color: #ffffff;
+                cursor: pointer;
+                background-color: #ff5e00;
+
+                
+                    &:hover {
+                        
+                        background-color: #ff5e00;
+                        transition: .3s;
+                        transform: translatey(-5px);
+                                 
+                    }
+
+                & a {
+                    color: rgb(255, 255, 255);
+
+                    font-weight: 500;
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: .8rem;
+                    
+                    width: 120px;
+
+                    text-shadow: 1px 1px 5px rgba(0,0,0,.5);
+
+                    & strong {
+                        font-style: italic;
+                    }                    
+                }
+            }
+        }
+    }
+}
 
 .container {
     
-
+    
     height: 100vh;
     position: relative;
     
@@ -317,6 +688,7 @@ header {
 
 }
 
+
 .container {
 
     & .list {
@@ -324,7 +696,7 @@ header {
         --calculation: 1;
 
         & .item {
-            transform: translateX(calc(100% * var(--calculation)));
+            transform: translateX(-100%);
             transition: .5s;
             opacity: 0;
 
@@ -341,7 +713,7 @@ header {
             & .content {
                 
                 & .maq-information, h2, .description, .maq-information {
-                    transform: translateX(calc(10px * var(--calculation)));
+                    transform: translateX(50px);
                     transition: .7s;
                     transition-delay: .3s;
                     opacity: 0;
@@ -482,5 +854,17 @@ header {
   to {
     opacity: 1;
     transform: scale(1);
+  }
+}
+
+@keyframes moveGradient {
+  10% {
+    background-position: 0% 50%;
+  }
+  80% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
